# minecraft_rusty_clone

./: .gitpod.yml  Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: _networking.rs  assets.rs  chat.rs  chunk.rs  main.rs  main_menu.rs  mesh_builder.rs  networking.rs  player.rs  world.rs
client/src/player/: camera.rs  mod.rs
server/: Cargo.toml
server/src/: auth.rs  chat.rs  http_server.rs  main.rs  server.rs  worldgen.rs
shared/: Cargo.toml
shared/src/: blocks.rs  consts.rs  lib.rs  messages.rs  networking.rs  types.rs  utils.rs
shared/src/types/: block.rs  chat.rs  chunk.rs  misc.rs  mod.rs  net.rs  player.rs
src/: chunk.rs  main.rs  material.rs  mesh_builder.rs  player.rs  world.rs
