[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = "0.7"
bevy_flycam = "0.7"
bevy_renet = "0.0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
futures-lite = "1.12"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]
