[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["client"] }
bevy = "0.7"
bevy_flycam = "0.7"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "ca39390" }
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "ca39390" }
bevy_egui = "0.14"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "1.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
time = { version = "0.3", features = ["local-offset", "formatting"] }
rand = "0.8"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic", "shared/fast-compile"]
