[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.7", default-features = false }
bevy_renet = "0.0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
noise = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "3.2", features = ["derive"] }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]
