[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.7", default-features = false }
bevy_renet = "0.0.3"
rand = { version = "0.8", features = ["small_rng"] }
noise = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.13"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic", "shared/fast-compile"]
