[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.7", default-features = false }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "ca39390" }
rand = { version = "0.8", features = ["small_rng"] }
noise = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "3.2", features = ["derive"] }
futures-lite = "1.12"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
base64 = "0.13"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic", "shared/fast-compile"]
