[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
compress = "0.2"
bevy = { version = "0.7", default-features = false }
bevy_renet = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.14"
bincode = "1.3"
path-clean = "0.1"

[features]
client = ["bevy/default"]
fast-compile = ["bevy/dynamic"]
