[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
lz4_flex = "0.9"
bevy = { version = "0.7", default-features = false }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "ca39390" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.14"
bincode = "1.3"
path-clean = "0.1"

[features]
client = ["bevy/default"]
fast-compile = ["bevy/dynamic"]
